<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remidio</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">Remidio Fundus-On-Phone</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="dob">DOB:</string>
    <string name="title_activity_rgb">RGBActivity</string>
    <string name="red_color">Red</string>
    <string name="green_color">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="export_pdf">Print</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="hospital_name">Hospital Name:</string>
    <string name="take_more_title">Take More Photos/Videos</string>
    <string name="title_activity_pdfview">PDFViewActivity</string>
    <string name="back">Back</string>
    <string name="print">Print</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="title_activity_full_video">FullVideoActivity</string>
    <string name="title_activity_display_directories">DisplayDirectoriesActivity</string>
    <string name="export">Export</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="camera_info">Tap to take picture, \n Press and hold to start/stop video</string>
    <string name="no_search_result">No patients found for *</string>
    <string name="name_to_search_hint">Enter name to search</string>
    <string name="long_press_to_delete">Long press on folder to delete the patient</string>
    <string name="error_not_taken_any_pic">You had not taken any pic, Are you sure you want to go forward?</string>
    <string name="error_delete">Are you sure you want to delete %s?</string>
    <string name="dialog_rearrange_title">Rearrange your images</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="export_file_lable">"Click on the button to export files "</string>
    <string name="admin_section">Admin Section</string>

</resources>
