<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".DisplayDirectoriesActivity" >

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/header_rl"
        android:layout_margin="5dp"
        android:background="@drawable/white_box"
        android:padding="5dp" >

        <EditText
            android:id="@+id/gridview_search_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/gridview_search_butotn"
            android:background="@android:color/transparent"
            android:hint="@string/name_to_search_hint" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/gridview_search_butotn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/magnifine" />
    </RelativeLayout>

    <GridView
        android:id="@+id/directory_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deletelabel"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search_layout"
        android:layout_margin="10dp"
        android:numColumns="auto_fit" >
    </GridView>

    <RelativeLayout
        android:id="@+id/header_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/main_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/search_no_result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_search_result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    @+id/arrangeok

    <TextView
        android:id="@+id/deletelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal"
        android:text="@string/long_press_to_delete"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="13sp" />

</RelativeLayout>