<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18a573" >

    <GridView
        android:id="@+id/mygridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lin"
        android:layout_below="@+id/rl"
        android:layout_margin="10dp"
        android:columnWidth="140dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <Button
            android:id="@+id/export_button"
            style="@style/ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_selector"
            android:text="@string/export_pdf"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/take_more_photo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_selector"
            android:text="@string/take_more_title"
            android:textSize="13sp" />

        <Button
            android:id="@+id/selectBtn"
            style="@style/ButtonLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2"
            android:background="@drawable/button_selector"
            android:text="Delete"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            android:visibility="invisible" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/black" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/main_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/share_imageview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:src="@drawable/share_image"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>