<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".RGBActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/image_full_layout"
            android:layout_width="135dp"
            android:layout_height="240dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" >

            <ImageView
                android:id="@+id/rgb_image_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <RelativeLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" >
            </RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/save_image_imageview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/checkmark" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/red_color"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/red_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/red_empty"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/red_empty_c" />

                <SeekBar
                    android:id="@+id/redseekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8"
                    android:max="510"
                    android:progress="255" />

                <ImageView
                    android:id="@+id/red_full"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/red_full_c" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/green_color"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/green_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />
            </RelativeLayout>
            
              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/green_empty"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/gree_empty_c" />

                <SeekBar
                    android:id="@+id/greenseekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8"
                    android:max="510"
                    android:progress="255" />

                <ImageView
                    android:id="@+id/green_full"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/gree_full_c" />
            </LinearLayout>

          

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/blue"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/blue_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/blue_empty"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/blue_empty_c" />

                <SeekBar
                    android:id="@+id/blueseekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8"
                    android:max="510"
                    android:progress="255" />

                <ImageView
                    android:id="@+id/blue_full"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/blue_full_c" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/alpha"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alpha_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/alpha_empty"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/empty_c" />

                <SeekBar
                    android:id="@+id/alphaseekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8"
                    android:max="510"
                    android:progress="255" />

                <ImageView
                    android:id="@+id/alpha_full"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/full_c" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>