<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#18a573"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/black" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/main_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/main_admin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/admin" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_rl"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="ID Number:"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="Name:"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="Gender:"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="Age:"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/dob"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="Doctor:"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/hospital_name"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="Address:"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/edtID"
                        style="@style/EditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:inputType="number"
                        android:paddingLeft="10dp" >
                    </EditText>

                    <EditText
                        android:id="@+id/edtName"
                        style="@style/EditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:paddingLeft="10dp" />

                    <Spinner
                        android:id="@+id/gender_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_bg"
                        android:entries="@array/gender" />

                    <EditText
                        android:id="@+id/edtAge"
                        style="@style/EditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="3"
                        android:paddingLeft="10dp" >
                    </EditText>

                    <EditText
                        android:id="@+id/edtDOB"
                        style="@style/EditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:paddingLeft="10dp" />

                    <EditText
                        android:id="@+id/edtDrName"
                        style="@style/EditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:paddingLeft="10dp" />

                    <EditText
                        android:id="@+id/hospital_name_edittext"
                        style="@style/EditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:paddingLeft="10dp" />

                    <EditText
                        android:id="@+id/edtComm"
                        style="@style/EditLayout"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_marginTop="5dp"
                        android:maxLength="100"
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:paddingLeft="10dp"
                        android:visibility="visible" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp" >

                <LinearLayout
                    android:id="@+id/view_pics_button"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_selector" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:src="@drawable/viewpic" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:text="VIEW"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <Button
                    android:id="@+id/TakePictureButton"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/activiate"
                    android:text="SAVE"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/exportButton"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_selector"
                    android:text="@string/export" 
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>